- Added position processor + solana clients

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ PG_LOG_LEVEL=all
 PUMP_FUN_URL=https://frontend-api.pump.fun
 RPC_URL=RPC_URL
 WALLET_PRIVATE_KEY=WALLET_PRIVATE_KEY
+API_KEY=API_KEY
+TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN
