--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "@solana/web3.js": "^1.95.4",
     "axios": "^1.7.7",
     "bs58": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "nestjs-telegraf": "^2.8.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
