--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ RPC_URL=RPC_URL
 WALLET_PRIVATE_KEY=WALLET_PRIVATE_KEY
 API_KEY=API_KEY
 TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN
+SOLANA_AMOUNT_PER_TOKEN=10000000
