- Added Sentry for error tracking

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ WALLET_PRIVATE_KEY=WALLET_PRIVATE_KEY
 API_KEY=API_KEY
 TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN
 SOLANA_AMOUNT_PER_TOKEN=10000000
+
+SENTRY_DNS=SENTRY_DNS
