--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,4 @@ API_KEY=API_KEY
 TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN
 SOLANA_AMOUNT_PER_TOKEN=10000000
 
-SENTRY_DNS=SENTRY_DNS
+SENTRY_DSN=SENTRY_DNS
